2008-04-18  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Now when #923 is fixed, do the same here, reuse the hostname from
	the streamer

2008-04-17  Johan Dahlin  <jdahlin@async.com.br>

	* Makefile.am:
	* autoregen.sh:
	* pkg/debian-common/rules:
	* pkg/ubuntu-gutsy/changelog:
	* pkg/ubuntu-gutsy/control:
	Add initial ubuntu gutsy package

	* flumotion/component/plugs/flashhttp/Makefile.am:
	Install in the right location plugs/flashhttp instead of
	misc/flashhttpplug

2008-04-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/flv-wizard.glade:
	  Add kbit/s in the UI.

2008-03-06  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/component/encoders/flv/flv_wizard.py:
	* flumotion/component/encoders/flv/vp6_wizard.py:
	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Mark the wizard plugins with interfaces.
	Add a docstring,
	remove GPL header.

2008-02-29  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/component/encoders/flv/vp6_wizard.py:
	The steps should not be called windows media!

2008-02-25  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac:
	* flumotion/component/plugs/flashhttp/Makefile.am:
	* flumotion/component/plugs/flashhttp/flashhttp.py:
	* flumotion/component/plugs/flashhttp/flashhttp.xml:
	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	* flumotion/component/plugs/flashhttp/flashplayer_location.py.in:
	* flumotion/component/plugs/flashhttp/workercheck.py:
	Do not require flumotion-flash-player at configure time.
	Instead check for it at runtime.

2008-02-25  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Remove the now unused socket class attribute.

2008-02-22  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/component/plugs/flashhttp/Makefile.am:
	* flumotion/component/plugs/flashhttp/flashhttp.py:
	* flumotion/component/plugs/flashhttp/flashhttp.xml: