@@ -1,3 +1,9 @@
+2008-04-18  Johan Dahlin  <johan@gnome.org>
+
+	* flumotion/component/encoders/mp3/mp3_wizard.py
+	(MP3Step.worker_changed.checkElements): Add a message and check for lame as well
+	here.
+
 2008-04-18  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
